--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@
 APP_ENV=dev
 APP_SECRET=173baa6886fa9f99eb32f5d90251d05f
 ###< symfony/framework-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='*'
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
